AAA/templates/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myloginspace-ldap
  labels:
    app.kubernetes.io/name: myloginspace-ldap
spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: myloginspace-ldap

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: myloginspace-ldap

    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: ldap
          image: ghcr.io/goauthentik/ldap:2022.5.3

          securityContext:
            readOnlyRootFilesystem: true

          resources:
            requests:
              cpu: 32Mi
              memory: 16M

          ports:
            - containerPort: 3389
              name: tcp-ldap
              protocol: TCP

            - containerPort: 3389
              name: udp-ldap
              protocol: UDP

            - containerPort: 6636
              name: tcp-ldaps
              protocol: TCP

            - containerPort: 6636
              name: udp-ldaps
              protocol: UDP

            - containerPort: 9300
              name: http-metrics
              protocol: TCP
