AAA/templates/BackendTrafficPolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: passive-health-check
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: authentik

  retry: { }

  healthCheck:
    active:
      interval: 5s
      timeout: 8s
      type: HTTP
      http:
        path: /-/health/ready/
        expectedStatuses:
          - 200
